-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Internal Code
-
Fully Compatible
-
ALL
-
Repl 2020-05-18
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The help text for the shutdown command is no longer accurate, as we have changed the behavior of the stepDown function. It now waits 10 seconds for a secondary to be completely caught up, instead of immediately checking to see if any node is within 10 seconds of lag.
Additionally, it would make sense to change the freeze time that shutdown uses in its stepdown from "120 seconds" to something much higher, as it ideally should be infinite. If something stalled shutdown for more than 120 seconds, it might be possible for a node to elect itself primary again.