SERVER-35443 Update help text for shutdown commands and increase freeze time